Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.9.5 (unreleased)

   Bugs fixed

      - Collector #2189: Fix logging of errors during product refresh.

      - Collector #2185: Log username for FCGI requests.

      - Collector #2152: Fixed MailHost documentation; simple_send does not
        process or validate its arguments in any way.

      - Collector #2175: ZTUtils.make_hidden_input did not escape double-quotes.

      - Collector #1907: Moved 'alt' property from File to Image.

      - Collector #1983: Specifying session-resolution-seconds >= 1200 caused
        Zope startup to fail.

      - Collector #2169: webdav.Resource.COPY did not send ObjectClonedEvent.

      - Updated Five to bugfix release 1.3.7.

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

      - Usage of 'urljoin' in 'webdav.davcmds' could lead to wrongly
        constructed urls.

      - Collector #2155: Fix wrong parameter being passed to
        logger's error() method, with tests.

      - Collector #2178: Fix ZopeTestCase doctest support for layers

  Zope 2.9.4 (2006/07/21)

   Bugs fixed

      - reStructuredText/ZReST: setting raw_enabled to 0 for security
        reasons

      - Collector #2113:  'zopectl test' often masked Ctrl-C.

      - OFS Application: Updated deprecation warnings.
        Support for '__ac_permissions__' and 'meta_types' will be removed in
        Zope 2.11, 'methods' support might remain longer.

      - Collector #2136: Map ResourceLockedError to the correct response code.

      - Collector #2109: XML-RPC did not handle DateTime.DateTime objects.

      - Collector #2016: DemoStorage couldn't wrap base storages without
                         an '_oid' attribute.

      - Collector #2133: standard_error_messages are out of sync.
